cabal-version:      3.0
name:               raytracing-in-one-weekend
version:            0.1.0.0
synopsis:           Haskell remake of Raytracing in one weekend

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jorge L. Martín
maintainer:         jormg82@gmail.com

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files: CHANGELOG.md


library common                          
    exposed-modules:  Color,
                      PPM,
                      Vec3

    hs-source-dirs:   common

    build-depends:    base

    default-language: Haskell2010


executable in-one-weekend
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    --other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        common

    hs-source-dirs:   in-one-weekend
    default-language: Haskell2010

